update in the colab notebook!

--- a/ring_election_simulation_LCR.ipynb
+++ b/ring_election_simulation_LCR.ipynb
@@ -12,8 +12,7 @@
     },
     "language_info": {
       "name": "python"
-    },
-    "accelerator": "GPU"
+    }
   },
   "cells": [
     {
@@ -32,19 +31,19 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "GgNNr6WrQ9CE",
-        "outputId": "7ce7c4ec-386a-46d7-b7c0-67c0ae18579d"
+        "outputId": "cd701047-d503-486e-d24e-3252ddc37fb2"
       },
       "source": [
         "from google.colab import drive\n",
         "drive.mount('/content/drive')"
       ],
-      "execution_count": 1,
+      "execution_count": 98,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Mounted at /content/drive\n"
+            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
           ]
         }
       ]
@@ -74,7 +73,7 @@
         "\n",
         "from uuid import uuid4"
       ],
-      "execution_count": 1,
+      "execution_count": 99,
       "outputs": []
     },
     {
@@ -86,9 +85,9 @@
         "# GLOB VAR\n",
         "\n",
         "algorithm = 'LCR'\n",
-        "N_processes = 30"
+        "N_processes = 5"
       ],
-      "execution_count": 2,
+      "execution_count": 100,
       "outputs": []
     },
     {
@@ -160,7 +159,7 @@
         "            if DEBUG: print(f'pid {p.u} sent {p.com}')\n",
         "    if DEBUG: print('\\n\\n')"
       ],
-      "execution_count": 3,
+      "execution_count": 101,
       "outputs": []
     },
     {
@@ -221,7 +220,7 @@
         "                  f'number of rounds: {self.rounds}',\n",
         "                  f'number of communications: {self.communications}']"
       ],
-      "execution_count": 4,
+      "execution_count": 102,
       "outputs": []
     },
     {
@@ -240,19 +239,19 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "OfXfZXkpWILm",
-        "outputId": "347840b3-6f44-4d92-967f-a00bb97e6a21"
+        "outputId": "39dd1099-e133-4e82-d6f8-d59773179e65"
       },
       "source": [
         "WRITE_PATH = 'drive/MyDrive/ring-election-simulation'\n",
         "!mkdir drive/MyDrive/ring-election-simulation"
       ],
-      "execution_count": 5,
+      "execution_count": 103,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "mkdir: cannot create directory ‘drive/MyDrive/ring-election-simulation’: No such file or directory\n"
+            "mkdir: cannot create directory ‘drive/MyDrive/ring-election-simulation’: File exists\n"
           ]
         }
       ]
@@ -274,7 +273,7 @@
         "        if PUi!=None:\n",
         "          return_dict[PUi]+= ring.complexity_report()\n"
       ],
-      "execution_count": 6,
+      "execution_count": 104,
       "outputs": []
     },
     {
@@ -283,7 +282,7 @@
         "id": "rPh0e5YGY2ot"
       },
       "source": [
-        "N_tot = [10000, 12500, 15000, 20000, 25000, 35000, 50000] * 3 + [75000, 100000]  \n",
+        "N_tot = [10000, 12500, 15000, 20000, 25000, 35000, 50000] * 10 + [75000, 100000]  \n",
         "Ltot = len(N_tot)\n",
         "counter = 1\n",
         "\n",
@@ -303,8 +302,12 @@
         "    p.join()\n",
         "\n",
         "  # Write temporal results\n",
-        "  with open(WRITE_PATH+'/long-simulation-results','r') as f:\n",
-        "    previous_results = f.readlines()\n",
+        "  try:\n",
+        "    with open(WRITE_PATH+'/long-simulation-results','r') as f:\n",
+        "      previous_results = f.readlines()\n",
+        "  except:\n",
+        "    # First lap: file may not exist\n",
+        "    previous_results = []\n",
         "  with open(WRITE_PATH+'/long-simulation-results','w') as f:\n",
         "    for l in previous_results:\n",
         "      f.write(l)\n",
