--- a/ring_election_simulation_LCR.ipynb
+++ b/ring_election_simulation_LCR.ipynb
@@ -3,7 +3,7 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "ring-election-simulation.ipynb",
+      "name": "ring_election_simulation_LCR.ipynb",
       "provenance": []
     },
     "kernelspec": {
@@ -31,19 +31,19 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "GgNNr6WrQ9CE",
-        "outputId": "cd701047-d503-486e-d24e-3252ddc37fb2"
+        "outputId": "f82f8a65-4c22-453f-a3b9-5c15dc000f79"
       },
       "source": [
         "from google.colab import drive\n",
         "drive.mount('/content/drive')"
       ],
-      "execution_count": 98,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
+            "Mounted at /content/drive\n"
           ]
         }
       ]
@@ -73,7 +73,7 @@
         "\n",
         "from uuid import uuid4"
       ],
-      "execution_count": 99,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -85,9 +85,9 @@
         "# GLOB VAR\n",
         "\n",
         "algorithm = 'LCR'\n",
-        "N_processes = 5"
+        "N_processes = 4"
       ],
-      "execution_count": 100,
+      "execution_count": 14,
       "outputs": []
     },
     {
@@ -124,6 +124,7 @@
         "def populate_states_and_channels(p):\n",
         "    # apply a particular criteria for the initial condition\n",
         "    # of both the message channels and processor'states\n",
+        "    p.u = p.u()\n",
         "    if algorithm=='LCR':\n",
         "        p.com[0] = p.u\n",
         "    else:\n",
@@ -159,7 +160,7 @@
         "            if DEBUG: print(f'pid {p.u} sent {p.com}')\n",
         "    if DEBUG: print('\\n\\n')"
       ],
-      "execution_count": 101,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -173,7 +174,7 @@
         "class Processor():\n",
         "    def __init__(self):\n",
         "        self.leader = False\n",
-        "        self.u = [int(str(uuid4().int)[:16]), np.random.rand()][1]\n",
+        "        self.u = np.random.rand\n",
         "        self.state = []\n",
         "        # clockwise inward message\n",
         "        self.cim = [None]\n",
@@ -186,7 +187,8 @@
         "\n",
         "\n",
         "class ProcessorRing():\n",
-        "    def __init__(self, N, verbose=True, PUi=None):\n",
+        "    def __init__(self, N, verbose=True, PUi=None, seed=1234):\n",
+        "        np.random.seed(seed)\n",
         "        self.ring = [Processor() for _ in range(N)]\n",
         "        self.communications = 0\n",
         "        self.rounds = 0\n",
@@ -220,7 +222,7 @@
         "                  f'number of rounds: {self.rounds}',\n",
         "                  f'number of communications: {self.communications}']"
       ],
-      "execution_count": 102,
+      "execution_count": 16,
       "outputs": []
     },
     {
@@ -239,13 +241,13 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "OfXfZXkpWILm",
-        "outputId": "39dd1099-e133-4e82-d6f8-d59773179e65"
+        "outputId": "ebb00339-d6fc-4f76-bd2a-824c1286d136"
       },
       "source": [
         "WRITE_PATH = 'drive/MyDrive/ring-election-simulation'\n",
         "!mkdir drive/MyDrive/ring-election-simulation"
       ],
-      "execution_count": 103,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
@@ -263,9 +265,10 @@
       },
       "source": [
         "# Define the main function\n",
-        "def main(N, VERBOSITY=False, PUi = None, return_dict = {}):\n",
+        "def main(N, VERBOSITY=False, SEED=1234, PUi = None, return_dict = {}):\n",
+        "    print(f'...Process {PUi} recieved Seed {SEED}...')\n",
         "    R = N\n",
-        "    ring = ProcessorRing(N, verbose=VERBOSITY, PUi=PUi)\n",
+        "    ring = ProcessorRing(N, seed=SEED, verbose=VERBOSITY, PUi=PUi)\n",
         "    for iteration in range(R):\n",
         "      try:\n",
         "        ring.transition_function()\n",
@@ -273,16 +276,20 @@
         "        if PUi!=None:\n",
         "          return_dict[PUi]+= ring.complexity_report()\n"
       ],
-      "execution_count": 104,
+      "execution_count": 18,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "rPh0e5YGY2ot"
+        "id": "rPh0e5YGY2ot",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "58a263e5-75be-4c9b-9d75-4512017c0511"
       },
       "source": [
-        "N_tot = [10000, 12500, 15000, 20000, 25000, 35000, 50000] * 10 + [75000, 100000]  \n",
+        "N_tot = [200]+[15000]+[10000, 12500, 15000]*5 + [20000, 25000, 35000, 50000] * 5 + [75000, 100000]*3  \n",
         "Ltot = len(N_tot)\n",
         "counter = 1\n",
         "\n",
@@ -295,7 +302,7 @@
         "\n",
         "  # Do the work\n",
         "  for PUi in range(N_processes):\n",
-        "    ptemp = multiprocessing.Process(target=main, args=(N, False, PUi, return_dict))\n",
+        "    ptemp = multiprocessing.Process(target=main, args=(N, False, np.random.randint(0,1000000), PUi, return_dict))\n",
         "    ptemp.start()\n",
         "    list_of_processes.append(ptemp)\n",
         "  for p in list_of_processes:\n",
@@ -319,7 +326,23 @@
         "  counter += 1"
       ],
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "...Process 0 recieved Seed 124146...\n",
+            "...Process 1 recieved Seed 587143...\n",
+            "...Process 3 recieved Seed 21517...\n",
+            "...Process 2 recieved Seed 931935...\n",
+            "INFO: ended lap #1 of 43\n",
+            "...Process 0 recieved Seed 477809...\n",
+            "...Process 3 recieved Seed 874127...\n",
+            "...Process 1 recieved Seed 62835...\n",
+            "...Process 2 recieved Seed 913445...\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
